style : ApplicationTest 복구